--- a/HTML/Popup.html
+++ b/HTML/Popup.html
@@ -9,13 +9,10 @@
         <h1>Messenger filter</h1>
 
         <a href="settings_page.html">
-          <img align="right" alt="Settings" width="26px" src="Images/settings_icon.png" />
+          <img align="right" alt="Settings" width="26px" src="../Images/settings_icon.png" />
         </a>
       </div>
       <script src="popup.js"></script>
 
-      <div id="google_adsense">
-        <script data-ad-client="ca-pub-8883059098611404" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-      </div>
     </body>
   </html>
