--- a/HTML/settings_page.html
+++ b/HTML/settings_page.html
@@ -16,6 +16,6 @@
         </div>
       </div>
 
-      <script src="settings.js"></script>
+      <script src="src/settings.js"></script>
     </body>
   </html>
