Fix reference to javascript files

--- a/HTML/Popup.html
+++ b/HTML/Popup.html
@@ -12,7 +12,7 @@
           <img align="right" alt="Settings" width="26px" src="../Images/settings_icon.png" />
         </a>
       </div>
-      <script src="popup.js"></script>
+      <script src="../src/popup.js"></script>
 
     </body>
   </html>
