testing button thing

--- a/HTML/Popup.html
+++ b/HTML/Popup.html
@@ -12,7 +12,8 @@
           <img align="right" alt="Settings" width="26px" src="../Images/settings_icon.png" />
         </a>
       </div>
-      <script src="../src/popup.js"></script>
 
+      <button onclick="myFunction()">Try it</button>
+      <script data-ad-client="ca-pub-8883059098611404" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </body>
   </html>
